--- a/workflows/deploy.yml
+++ b/workflows/deploy.yml
@@ -3,32 +3,31 @@ name: Deploy to AWS
 on:
   push:
     branches:
-      - main  # 触发分支
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Deploy to S3
-      uses: aws-actions/s3-sync@v1
-      with:
-        args: --delete
-        bucket: ${{ secrets.S3_BUCKET }}
-        region: ${{ secrets.AWS_REGION }}
-        source: ./dist   # 构建输出目录（Hexo/VuePress/React等）
+      - name: Deploy to S3
+        uses: aws-actions/s3-sync@v1
+        with:
+          args: --delete
+          bucket: ${{ secrets.S3_BUCKET }}
+          region: ${{ secrets.AWS_REGION }}
 
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-    - name: Invalidate CloudFront cache
-      uses: chetan/invalidate-cloudfront-action@v1
-      with:
-        distribution: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
-        paths: "/*"
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - name: Invalidate CloudFront cache
+        uses: chetan/invalidate-cloudfront-action@v1
+        with:
+          distribution: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
+          paths: "/*"
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
