new deploy file

--- a/workflows/deploy.yml
+++ b/workflows/deploy.yml
@@ -19,20 +19,32 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Deploy to S3
+      - name: Deploy HTML (short cache)
         run: |
           aws s3 sync . s3://${{ secrets.S3_BUCKET }} \
             --delete \
+            --exclude "*" \
+            --include "*.html" \
             --exclude ".git/*" \
             --exclude ".github/*" \
             --exclude "workflows/*" \
             --exclude "*.md" \
             --exclude ".gitignore" \
-            --cache-control "max-age=31536000,public" \
-            --acl public-read
+            --cache-control "max-age=300,public"
+
+      - name: Deploy other assets (long cache)
+        run: |
+          aws s3 sync . s3://${{ secrets.S3_BUCKET }} \
+            --exclude "*.html" \
+            --exclude ".git/*" \
+            --exclude ".github/*" \
+            --exclude "workflows/*" \
+            --exclude "*.md" \
+            --exclude ".gitignore" \
+            --cache-control "max-age=31536000,public"
 
       - name: Invalidate CloudFront cache
-        if: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID != '' }}
+        if: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID && secrets.CLOUDFRONT_DISTRIBUTION_ID != '' }}
         run: |
           aws cloudfront create-invalidation \
             --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} \
