--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,51 +1,24 @@
-name: Deploy to AWS S3
+name: Deploy to S3
 
 on:
   push:
     branches:
-      - main
+      - main 
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
+      - name: Sync files to S3
+        uses: aws-actions/s3-sync@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
-
-      - name: Deploy HTML (short cache)
-        run: |
-          aws s3 sync . s3://${{ secrets.S3_BUCKET }} \
-            --delete \
-            --exclude "*" \
-            --include "*.html" \
-            --exclude ".git/*" \
-            --exclude ".github/*" \
-            --exclude "workflows/*" \
-            --exclude "*.md" \
-            --exclude ".gitignore" \
-            --cache-control "max-age=300,public"
-
-      - name: Deploy other assets (long cache)
-        run: |
-          aws s3 sync . s3://${{ secrets.S3_BUCKET }} \
-            --exclude "*.html" \
-            --exclude ".git/*" \
-            --exclude ".github/*" \
-            --exclude "workflows/*" \
-            --exclude "*.md" \
-            --exclude ".gitignore" \
-            --cache-control "max-age=31536000,public"
-
-      - name: Invalidate CloudFront cache
-        if: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID && secrets.CLOUDFRONT_DISTRIBUTION_ID != '' }}
-        run: |
-          aws cloudfront create-invalidation \
-            --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} \
-            --paths "/*"
+          args: --delete
+          bucket: ${{ secrets.S3_BUCKET }}
+          region: ${{ secrets.AWS_REGION }}
+          source: ./ 
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
